--- a/child-dashboard-page.qmd
+++ b/child-dashboard-page.qmd
@@ -1,13 +1,42 @@
 # `r title`
 
+```{r}
+total_participants <- nrow(data)
+
+total_male <- sum(data$gender_giver == 'M')
+
+total_female <- sum(data$gender_giver == 'F')
+```
+
+
 ## {height=25%}
 ```{r}
 #| content: valuebox
 #| title: "Total Participants"
 list(
   icon = "person-arms-up",
+  color = "success",
+  value = total_participants
+)
+```
+
+```{r}
+#| content: valuebox
+#| title: "Total Male"
+list(
+  icon = "gender-male",
   color = "primary",
-  value = nrow(data)
+  value = total_male
+)
+```
+
+```{r}
+#| content: valuebox
+#| title: "Total Female"
+list(
+  icon = "gender-female",
+  color = "danger",
+  value = total_female
 )
 ```
 
@@ -25,6 +54,7 @@ create_network_viz(data, link_distance = 50, charge = -50)
 #| out-width: 100%
 #| height: 100%
 data |>
+  select(participants_giver, participants_receiver) |>
   gt() |> 
   opt_interactive(
     use_compact_mode = TRUE,
