--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,8 @@
 ---
 title: 'FAM BAM Secret Santa'
-format: dashboard
+format:
+  dashboard:
+    scrolling: true
 editor: visual
 editor_options: 
   chunk_output_type: console
@@ -22,22 +24,21 @@ create_network_viz <- \(data, link_distance, charge) {
   
   nodes <- data.frame(name = unique(c(data$participants_giver, data$participants_receiver)))  |>
     mutate(Group = row_number())
-  
+
   links <- data |>
     mutate(
       source = match(participants_giver, nodes$name) - 1,
-      target = match(participants_receiver, nodes$name) - 1
-    )  |> 
-    mutate(value = 1) |> 
-    as.data.frame()
-  
+      target = match(participants_receiver, nodes$name) - 1,
+      value = 1
+    ) |> as.data.frame()
+
   forceNetwork(
     Links = links,
     Nodes = nodes,
     Source = "source",
     Target = "target",
     NodeID = "name",
-    Group = "Group",
+    Group = "name",
     Value = 'value',
     opacity = 0.9,
     zoom = TRUE,
@@ -51,7 +52,54 @@ create_network_viz <- \(data, link_distance, charge) {
   
 }
 
+
 ```
+
+# Home
+
+## 
+```{r}
+#| expandable: true
+#| title: What are the odds of matching based on surname ?
+out <- pins::pin_read(board, 'sims-plot-prob-last-name')
+
+out
+```
+
+##
+```{r}
+#| expandable: true
+#| title: Who has matched with who?
+
+create_network_viz(data, link_distance = 150, charge = -200)
+```
+
+##
+```{r}
+#| expandable: true
+#| title: Which year had the most participants?
+
+local({
+  plot_data <- data |>
+    group_by(year) |>
+    summarise(n = n())
+  
+  plot_data <- plot_data |>
+    mutate(color = ifelse(n == max(plot_data$n), 'red', 'grey90'))
+  
+  p <- ggplot(plot_data, aes(x = year, y = n, fill = color)) +
+    geom_col() +
+    scale_fill_identity() +
+    theme_minimal(base_size = 15) +
+    theme(panel.grid = element_blank(), legend.position = 'none') +
+    scale_y_continuous(breaks = seq(0, max(plot_data$n), by = 1)) +
+    labs(x = 'Year', y = 'Number of Participants')
+  
+  plotly::ggplotly(p)
+})
+
+```
+
 
 ```{r}
 #| results: asis
